--- a/css/styles.css
+++ b/css/styles.css
@@ -137,8 +137,10 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	justify-content: center;
 	display: flex;
-	flex-direction: column;
+	flex-wrap: wrap;
+	/* flex-direction: column; */
 	align-items: center;
 
 }
@@ -210,8 +212,8 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: relative;
+  width: 40%;
 }
 #restaurant-name {
   color: #f18200;
